--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   background-color: rgb(43, 41, 41);
+  overflow: hidden;
 }
 
